[image_analysis,shenker/image_analysis] WIP pipeline. Simple deltalake writing works for DelayedTableStore.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240529 Pipeline.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240529 Pipeline.ipynb
@@ -92,6 +92,7 @@
     "import paulssonlab.image_analysis.trench_detection as trench_detection\n",
     "import paulssonlab.image_analysis.util as util\n",
     "import paulssonlab.image_analysis.workflow as workflow\n",
+    "import paulssonlab.util.core as core\n",
     "from paulssonlab.image_analysis.ui import RevImage, display_image"
    ]
   },
@@ -382,7 +383,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.fish_crops.keys()"
+    "import deltalake\n",
+    "import polars as pl"
    ]
   },
   {
@@ -392,7 +394,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p.fish_measurements[(8, 1)][2]"
+    "x = pl.read_delta(str(output_dir / \"fish_measurements\"))"
    ]
   },
   {
@@ -402,7 +404,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x.dependencies[0]  # .is_ready()"
+    "y = deltalake.DeltaTable(str(output_dir / \"fish_measurements\")).to_pandas()"
    ]
   },
   {
@@ -412,7 +414,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_image(p.fish_crops[(8, \"Cy5\", 1)][2], scale=1)"
+    "y"
    ]
   },
   {
@@ -422,7 +424,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(p._queue._items)"
+    "x"
    ]
   },
   {
@@ -432,13 +434,168 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_image(p.crops[(8, \"RFP-EM\", 200)][2], scale=True)"
+    "write_tasks.append(\n",
+    "    delayed(write_zarr)(\n",
+    "        output_dir / f\"crops_v={position}.zarr\",\n",
+    "        crops,\n",
+    "        t,\n",
+    "        max_t,\n",
+    "        measurement_channels,\n",
+    "    )\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.fish_crops.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.fish_measurements[(8, 1)][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items = {\n",
+    "    k: p.fish_measurements.value[k].result()\n",
+    "    for k in [(8, 1)]\n",
+    "    if p.fish_measurements.value[k].is_ready()\n",
+    "}\n",
+    "\n",
+    "delayed.DelayedTableStore._concat_table(items, p.FOV_T_ROI_SCHEMA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[s[0] for s in p.FOV_T_ROI_SCHEMA[: len(first_key)]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[s for s in p.FOV_T_ROI_SCHEMA[: len(first_key)]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(first_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p.FOV_T_ROI_SCHEMA[: len(first_key)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(first_key, names, items)\n",
+    "# pd.concat(items2, names=names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.dependencies[0]  # .is_ready()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(p.fish_crops[(8, \"Cy5\", 1)][2], scale=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(p._queue._items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(p.crops[(8, \"RFP-EM\", 200)][2], scale=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +827,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +937,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +992,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +1002,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +1041,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70",
+   "id": "84",
    "metadata": {},
    "source": [
     "# Analysis"
@@ -893,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,7 +1079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +1101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74",
+   "id": "88",
    "metadata": {},
    "source": [
     "# Manual FISH trench crops"
@@ -953,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,7 +1141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "91",
    "metadata": {
     "tags": []
    },
@@ -1030,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "92",
    "metadata": {
     "tags": []
    },
@@ -1042,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "93",
    "metadata": {
     "tags": []
    },
@@ -1054,7 +1211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81",
+   "id": "95",
    "metadata": {},
    "source": [
     "# Segmentation"
@@ -1072,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "96",
    "metadata": {
     "tags": []
    },
@@ -1085,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "97",
    "metadata": {
     "tags": []
    },
@@ -1110,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "98",
    "metadata": {
     "tags": []
    },
@@ -1125,7 +1282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "99",
    "metadata": {
     "tags": []
    },
@@ -1137,7 +1294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "100",
    "metadata": {
     "tags": []
    },
@@ -1149,7 +1306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "101",
    "metadata": {
     "tags": []
    },
@@ -1161,7 +1318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "102",
    "metadata": {
     "tags": []
    },
@@ -1182,7 +1339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "103",
    "metadata": {
     "tags": []
    },
@@ -1194,7 +1351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "104",
    "metadata": {
     "tags": []
    },
@@ -1206,7 +1363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "105",
    "metadata": {
     "tags": []
    },
@@ -1218,7 +1375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92",
+   "id": "106",
    "metadata": {
     "tags": []
    },
@@ -1232,7 +1389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "107",
    "metadata": {
     "tags": []
    },
@@ -1244,7 +1401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94",
+   "id": "108",
    "metadata": {
     "tags": []
    },
@@ -1256,7 +1413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95",
+   "id": "109",
    "metadata": {
     "tags": []
    },
@@ -1268,7 +1425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96",
+   "id": "110",
    "metadata": {
     "tags": []
    },
@@ -1281,7 +1438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97",
+   "id": "111",
    "metadata": {
     "tags": []
    },
@@ -1293,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98",
+   "id": "112",
    "metadata": {
     "tags": []
    },
@@ -1305,7 +1462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99",
+   "id": "113",
    "metadata": {
     "tags": []
    },
@@ -1317,7 +1474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "100",
+   "id": "114",
    "metadata": {
     "tags": []
    },
@@ -1329,7 +1486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101",
+   "id": "115",
    "metadata": {
     "tags": []
    },
@@ -1341,7 +1498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102",
+   "id": "116",
    "metadata": {
     "tags": []
    },
@@ -1353,7 +1510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103",
+   "id": "117",
    "metadata": {
     "tags": []
    },
@@ -1373,7 +1530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "104",
+   "id": "118",
    "metadata": {
     "tags": []
    },
@@ -1394,7 +1551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "105",
+   "id": "119",
    "metadata": {
     "tags": []
    },
@@ -1406,7 +1563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106",
+   "id": "120",
    "metadata": {
     "tags": []
    },
@@ -1428,7 +1585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "107",
+   "id": "121",
    "metadata": {
     "tags": []
    },
@@ -1440,7 +1597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "108",
+   "id": "122",
    "metadata": {
     "tags": []
    },
@@ -1466,7 +1623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109",
+   "id": "123",
    "metadata": {
     "tags": []
    },
@@ -1478,7 +1635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110",
+   "id": "124",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1488,7 +1645,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "111",
+   "id": "125",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1506,7 +1663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112",
+   "id": "126",
    "metadata": {
     "tags": []
    },
@@ -1530,7 +1687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "113",
+   "id": "127",
    "metadata": {
     "tags": []
    },
@@ -1553,7 +1710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "114",
+   "id": "128",
    "metadata": {
     "tags": []
    },
@@ -1568,7 +1725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115",
+   "id": "129",
    "metadata": {
     "tags": []
    },
@@ -1580,7 +1737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "116",
+   "id": "130",
    "metadata": {
     "tags": []
    },
@@ -1594,7 +1751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "117",
+   "id": "131",
    "metadata": {
     "tags": []
    },
@@ -1608,7 +1765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "118",
+   "id": "132",
    "metadata": {
     "tags": []
    },
@@ -1622,7 +1779,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "119",
+   "id": "133",
    "metadata": {
     "tags": []
    },
